--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,7 @@ html, body {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	margin: 0 20% 2rem 20%;
 	-ms-flex-flow: column;
 	flex-flow: column;
 	-webkit-box-align: start;
