--- a/css/style.css
+++ b/css/style.css
@@ -150,12 +150,12 @@ html, body {
 	z-index: 12;
 }
 
-	#gc-hand:hover,
-	#gc-hand:active {
-		opacity: 0;
-		-webkit-transition: all 1s;
-		transition: all 1s;
-	}
+#gc-hand:hover,
+#gc-hand:active {
+	opacity: 0;
+	-webkit-transition: all 1s;
+	transition: all 1s;
+}
 
 #img-feature {
 	-webkit-clip-path: url(#homeClip);
@@ -186,28 +186,32 @@ html, body {
 
 #about-textbox {
 	color: #efefef;
-	left: 10%;
-	right: 10%;
-	top: 10%;
-	height: 70%;
+	height: 100%;
+	width: 100%;
+	padding: 10%;
 	position: absolute;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
-	-ms-flex-flow: column;
-	flex-flow: column;
+	-ms-flex-flow: row;
+	flex-flow: row;
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
 	justify-content: center;
+
 }
 
 .about-header {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
-	margin: 0 20% 2rem 20%;
+	margin: 0 6rem 2rem 0;
+	width: 40%;
 	-ms-flex-flow: column;
 	flex-flow: column;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
 	-webkit-box-align: start;
 	-ms-flex-align: start;
 	align-items: flex-start;
@@ -230,11 +234,11 @@ html, body {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
-	-ms-flex-flow: row;
-	flex-flow: row;
-	-webkit-box-pack: justify;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
+	-ms-flex-flow: column;
+	flex-flow: column;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
@@ -363,16 +367,16 @@ html, body {
 	overflow: hidden;
 }
 
-	.game-card img {
-		width: 100%;
-		height: 100%;
-		-o-object-fit: cover;
-		object-fit: cover;
-		-webkit-transition: all 0.6s ease-in-out;
-		transition: all 0.6s ease-in-out;
-		-webkit-filter: grayscale(100%);
-		filter: grayscale(100%);
-	}
+.game-card img {
+	width: 100%;
+	height: 100%;
+	-o-object-fit: cover;
+	object-fit: cover;
+	-webkit-transition: all 0.6s ease-in-out;
+	transition: all 0.6s ease-in-out;
+	-webkit-filter: grayscale(100%);
+	filter: grayscale(100%);
+}
 
 .game-card-label {
 	color: #ebeded;
@@ -419,19 +423,19 @@ html, body {
 	flex-grow: 10;
 }
 
-	.game-card:hover img {
-		-webkit-filter: grayscale(0);
-		filter: grayscale(0);
-	}
+.game-card:hover img {
+	-webkit-filter: grayscale(0);
+	filter: grayscale(0);
+}
 
-	.game-card:hover .game-card-label {
-		top: calc(100% - 2em);
-		color: #f00;
-		background: rgba(0, 0, 0, 0.5);
-		font-size: 4rem;
-		-webkit-transform: rotate(0deg) skew(-5deg);
-		transform: rotate(0deg) skew(-5deg);
-	}
+.game-card:hover .game-card-label {
+	top: calc(100% - 2em);
+	color: #f00;
+	background: rgba(0, 0, 0, 0.5);
+	font-size: 4rem;
+	-webkit-transform: rotate(0deg) skew(-5deg);
+	transform: rotate(0deg) skew(-5deg);
+}
 
 .game-card i {
 	padding: 1em;
@@ -505,13 +509,13 @@ html, body {
 	width: auto;
 }
 
-	.email-link:hover {
-		color: #f00;
-		-webkit-transform: translateY(-10%);
-		transform: translateY(-10%);
-		-webkit-transition: all .5s;
-		transition: all .5s;
-	}
+.email-link:hover {
+	color: #f00;
+	-webkit-transform: translateY(-10%);
+	transform: translateY(-10%);
+	-webkit-transition: all .5s;
+	transition: all .5s;
+}
 
 .contacts-icons-box {
 	display: -webkit-box;
@@ -527,118 +531,118 @@ html, body {
 	justify-content: center;
 }
 
-	.contacts-icons-box a {
-		color: #181818;
-		display: block;
-		font-size: 4rem;
-		height: 8rem;
-		line-height: 8rem;
-		margin: 0 40px 40px;
-		position: relative;
-		text-align: center;
-		text-decoration: none;
-		-webkit-transition: all .5s;
-		transition: all .5s;
-		width: 8rem;
-	}
+.contacts-icons-box a {
+	color: #181818;
+	display: block;
+	font-size: 4rem;
+	height: 8rem;
+	line-height: 8rem;
+	margin: 0 40px 40px;
+	position: relative;
+	text-align: center;
+	text-decoration: none;
+	-webkit-transition: all .5s;
+	transition: all .5s;
+	width: 8rem;
+}
 
-		.contacts-icons-box a span {
-			position: absolute;
-			-webkit-transition: -webkit-transform .5s;
-			transition: -webkit-transform .5s;
-			transition: transform .5s;
-			transition: transform .5s, -webkit-transform .5s;
-		}
+.contacts-icons-box a span {
+	position: absolute;
+	-webkit-transition: -webkit-transform .5s;
+	transition: -webkit-transform .5s;
+	transition: transform .5s;
+	transition: transform .5s, -webkit-transform .5s;
+}
 
-			.contacts-icons-box a span:nth-child(1),
-			.contacts-icons-box a span:nth-child(3) {
-				background: #181818;
-				height: 2px;
-				width: 100%;
-			}
+.contacts-icons-box a span:nth-child(1),
+.contacts-icons-box a span:nth-child(3) {
+	background: #181818;
+	height: 2px;
+	width: 100%;
+}
 
-			.contacts-icons-box a span:nth-child(1) {
-				left: 0;
-				top: 0;
-				-webkit-transform-origin: right;
-				transform-origin: right;
-			}
+.contacts-icons-box a span:nth-child(1) {
+	left: 0;
+	top: 0;
+	-webkit-transform-origin: right;
+	transform-origin: right;
+}
 
-		.contacts-icons-box a:hover span:nth-child(1) {
-			-webkit-transform: scaleX(0);
-			transform: scaleX(0);
-			-webkit-transform-origin: left;
-			transform-origin: left;
-			-webkit-transition: -webkit-transform .5s;
-			transition: -webkit-transform .5s;
-			transition: transform .5s;
-			transition: transform .5s, -webkit-transform .5s;
-		}
+.contacts-icons-box a:hover span:nth-child(1) {
+	-webkit-transform: scaleX(0);
+	transform: scaleX(0);
+	-webkit-transform-origin: left;
+	transform-origin: left;
+	-webkit-transition: -webkit-transform .5s;
+	transition: -webkit-transform .5s;
+	transition: transform .5s;
+	transition: transform .5s, -webkit-transform .5s;
+}
 
-		.contacts-icons-box a span:nth-child(3) {
-			bottom: 0;
-			left: 0;
-			-webkit-transform-origin: left;
-			transform-origin: left;
-		}
+.contacts-icons-box a span:nth-child(3) {
+	bottom: 0;
+	left: 0;
+	-webkit-transform-origin: left;
+	transform-origin: left;
+}
 
-		.contacts-icons-box a:hover span:nth-child(3) {
-			-webkit-transform: scaleX(0);
-			transform: scaleX(0);
-			-webkit-transform-origin: right;
-			transform-origin: right;
-			-webkit-transition: -webkit-transform .5s;
-			transition: -webkit-transform .5s;
-			transition: transform .5s;
-			transition: transform .5s, -webkit-transform .5s;
-		}
+.contacts-icons-box a:hover span:nth-child(3) {
+	-webkit-transform: scaleX(0);
+	transform: scaleX(0);
+	-webkit-transform-origin: right;
+	transform-origin: right;
+	-webkit-transition: -webkit-transform .5s;
+	transition: -webkit-transform .5s;
+	transition: transform .5s;
+	transition: transform .5s, -webkit-transform .5s;
+}
 
-		.contacts-icons-box a span:nth-child(2),
-		.contacts-icons-box a span:nth-child(4) {
-			background: #181818;
-			height: 100%;
-			width: 2px;
-		}
+.contacts-icons-box a span:nth-child(2),
+.contacts-icons-box a span:nth-child(4) {
+	background: #181818;
+	height: 100%;
+	width: 2px;
+}
 
-		.contacts-icons-box a span:nth-child(2) {
-			left: 0;
-			top: 0;
-			-webkit-transform: scaleY(0);
-			transform: scaleY(0);
-			-webkit-transform-origin: bottom;
-			transform-origin: bottom;
-		}
+.contacts-icons-box a span:nth-child(2) {
+	left: 0;
+	top: 0;
+	-webkit-transform: scaleY(0);
+	transform: scaleY(0);
+	-webkit-transform-origin: bottom;
+	transform-origin: bottom;
+}
 
-		.contacts-icons-box a:hover span:nth-child(2) {
-			-webkit-transform: scaleY(1);
-			transform: scaleY(1);
-			-webkit-transform-origin: top;
-			transform-origin: top;
-			-webkit-transition: -webkit-transform .5s;
-			transition: -webkit-transform .5s;
-			transition: transform .5s;
-			transition: transform .5s, -webkit-transform .5s;
-		}
+.contacts-icons-box a:hover span:nth-child(2) {
+	-webkit-transform: scaleY(1);
+	transform: scaleY(1);
+	-webkit-transform-origin: top;
+	transform-origin: top;
+	-webkit-transition: -webkit-transform .5s;
+	transition: -webkit-transform .5s;
+	transition: transform .5s;
+	transition: transform .5s, -webkit-transform .5s;
+}
 
-		.contacts-icons-box a span:nth-child(4) {
-			right: 0;
-			top: 0;
-			-webkit-transform: scaleY(0);
-			transform: scaleY(0);
-			-webkit-transform-origin: top;
-			transform-origin: top;
-		}
+.contacts-icons-box a span:nth-child(4) {
+	right: 0;
+	top: 0;
+	-webkit-transform: scaleY(0);
+	transform: scaleY(0);
+	-webkit-transform-origin: top;
+	transform-origin: top;
+}
 
-		.contacts-icons-box a:hover span:nth-child(4) {
-			-webkit-transform: scaleY(1);
-			transform: scaleY(1);
-			-webkit-transform-origin: bottom;
-			transform-origin: bottom;
-			-webkit-transition: -webkit-transform .5s;
-			transition: -webkit-transform .5s;
-			transition: transform .5s;
-			transition: transform .5s, -webkit-transform .5s;
-		}
+.contacts-icons-box a:hover span:nth-child(4) {
+	-webkit-transform: scaleY(1);
+	transform: scaleY(1);
+	-webkit-transform-origin: bottom;
+	transform-origin: bottom;
+	-webkit-transition: -webkit-transform .5s;
+	transition: -webkit-transform .5s;
+	transition: transform .5s;
+	transition: transform .5s, -webkit-transform .5s;
+}
 
 
 
@@ -660,8 +664,6 @@ html, body {
 		transform: translateX(0);
 	}
 }
-
-
 
 @keyframes slideIn-fromRight {
 	0% {
@@ -834,42 +836,33 @@ html, body {
 
 @media (orientation: portrait) {
 	#about-textbox {
-		left: 10%;
-		right: 10%;
-		top: 10%;
 		-ms-flex-flow: column;
 		flex-flow: column;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
+		align-items: center;
 	}
 
-	.about-content-flexbox {
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		-ms-flex-flow: column;
-		flex-flow: column;
-		-webkit-box-pack: justify;
-		-ms-flex-pack: justify;
-		justify-content: space-between;
-		-webkit-box-align: start;
-		-ms-flex-align: start;
-		align-items: flex-start;
+	.about-header {
+		-webkit-box-align: center;
+		-ms-flex-align: center;
+		align-items: center;
+		margin: 0 0 2rem 0;
+		width: 60%;
+	}
+
+	#about-textbox h1 {
+		text-align: center;
+	}
+
+	.about-company-text {
+		text-align: center;
 	}
 
 	.person {
 		height: auto;
 		width: 30vw;
 		padding: 1rem;
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		-ms-flex-flow: row;
-		flex-flow: row;
-		-webkit-box-pack: start;
-		-ms-flex-pack: start;
-		justify-content: flex-start;
-		-webkit-box-align: center;
-		-ms-flex-align: center;
-		align-items: center;
 	}
 
 	.person-text {
